ingress/ingress-rules-teku.yml
---
# ingress-nginx IngressClass
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: network-nginx
  namespace: teku
spec:
  controller: k8s.io/network-ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teku-ingress-routes
  namespace: teku
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/kibana/(.*) /$1 break;
      rewrite (?i)/kibana$ / break;
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/whitelist-source-range: w.x.y.z/32,a.b.c.d/32

spec:
  ingressClassName: network-nginx
  rules:
  - http:
      paths:
      - path: /rest
        pathType: Prefix
        backend:
          service:
            name: teku-node-1
            port:
              number: 5051
      - path: /rpc
        pathType: Prefix
        backend:
          service:
            name: besu-node-1
            port:
              number: 8545
